@@ -4,6 +4,15 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Oct 11, 2009
+---------------------------------------------------------------------
+- Made Facebox library work with the project is deployed in subdirectory.
+
+Sat, Oct 10, 2009
+---------------------------------------------------------------------
+- Happy birthday, Diana!
+- Setting up Apache with the latest Passenger.
+
 Fri, Oct 9, 2009
 ---------------------------------------------------------------------
 - Prevent multiple form submissions by pressing [Submit] button twice.
